--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 body{
     background: rgb(123, 168, 185);
+    padding-bottom: 2%;
 }
 .container{
     background: #fff;
@@ -60,4 +61,94 @@ body{
     background-color: #000000; 
     color: #fff; 
     transition: 2ms;
+}
+
+/* title styles */
+.title {
+    background-color: #fff;
+    padding: 1%;
+    text-align: center;
+}
+
+/* topnav styles */
+.topnav {
+    overflow: hidden;
+    background-color: #212d37;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #fff;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.topnav a:hover {
+    background-color: #4a6071;
+}
+
+/* text entry styles */
+.textentry {
+    width: 100%;
+    padding: 15px 20px;
+    margin: 8px 0px;
+    box-sizing: border-box;
+    background-color: #4a6071;;
+    color: #fff;
+    border-radius: 4px;
+    font-size: large;
+}
+
+.textentry-answer {
+    width: 90%;
+}
+
+.answer-container {
+    display: inline-block;
+    width: 100%;
+    vertical-align: top;
+    margin-right: 20px;
+}
+
+/* Checkbox */
+.checkbox {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 25px;
+    height: 25px;
+    background-color: darkred;
+    border: 2px solid black;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+input[type="checkbox"]:checked {
+    background-color: limegreen;
+}
+
+#submit-btn{
+    background: #212d37;
+    color: #fff;
+    font-weight: 500;
+    width: 150px;
+    border: 0;
+    padding: 10px;
+    margin: 20px auto 0;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block;
+}
+
+/* Misc cleanup */
+
+input[type=number]::-webkit-inner-spin-button { /* disables arrows for number entry */
+    -webkit-appearance: none;
+}
+
+textarea {
+    resize: none;
 }
